<resources>

    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="text_agreement">I have read and agree with the terms</string>
    <string name="text_info">Fill this form to register as user</string>
    <string name="custom_listview">Custom ListView</string>
    <string name="menu_konteks">Context Menu</string>
    <string name="listview">ListView</string>
    <string name="form_register">Form Register</string>
    <string name="register">Register</string>
    <string name="custom_list">Custom List</string>
    <string name="photos">Photos</string>
    <string name="list_photos">LIST PHOTOS</string>
    <string name="msg_token_fmt">HELLO WORLD</string>


</resources>